# yandex-tracker-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: RELEASE.md
docs/plans/: client-pooling-module-split.md
scripts/: sync_tracker_operations.py
src/yandex_tracker_mcp/: __init__.py  cli.py  client.py  config.py  errors.py  handlers.py  models.py  operations.json  pagination.py  registry.py  server.py  shaping.py  tools.py
tests/: test_client.py  test_config.py  test_handlers.py  test_pagination.py  test_registry.py  test_server.py  test_shaping.py  test_tools.py
