[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "yandex-tracker-mcp"
version = "0.1.4"
description = "FastMCP server for Yandex Tracker API v3"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "yandex-tracker-mcp contributors" }
]
keywords = ["mcp", "fastmcp", "yandex", "tracker", "api"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Typing :: Typed",
]
dependencies = [
  "fastmcp>=3.2.4",
  "httpx>=0.27.0",
  "pydantic>=2.10.0",
]

[project.urls]
Homepage = "https://github.com/vlkuz/yandex-tracker-mcp"
Repository = "https://github.com/vlkuz/yandex-tracker-mcp"
Issues = "https://github.com/vlkuz/yandex-tracker-mcp/issues"

[project.optional-dependencies]
dev = [
  "mypy>=1.14.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "respx>=0.22.0",
  "ruff>=0.9.0",
]

[project.scripts]
tracker-mcp = "yandex_tracker_mcp.cli:main"
tracker-mcp-stdio = "yandex_tracker_mcp.cli:main_stdio"
tracker-mcp-http = "yandex_tracker_mcp.cli:main_http"

[tool.hatch.build.targets.wheel]
packages = ["src/yandex_tracker_mcp"]
include = [
  "src/yandex_tracker_mcp/operations.json",
  "src/yandex_tracker_mcp/py.typed",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/yandex_tracker_mcp",
  "tests",
  "scripts",
  "README.md",
  "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
pretty = true
strict = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
exclude = ["tests"]
